<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="main_array">
        <item>Thông tin cá nhân</item>
        <item>Tạo lịch trình</item>
        <item>Quản lý sản phẩm</item>
        <item>Quản lý hàng tồn kho</item>
        <item>Quản lý khách hàng</item>
        <item>Quản lý hóa đơn đặt hàng</item>
        
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    <string name="app_name">Hệ thống quản lý phân phối</string>
    <string name="action_settings">Cài đặt</string>
    <string name="no_demos">No Demos</string>
    <string name="main_label">Xin chào</string>
    
    <!-- For Login -->
    <string name="username_label">Tài khoản</string>
    <string name="password_label">Mật khẩu</string>
    <string name="login_label">Đăng nhập</string>
    <string name="text_label">Bạn phải đăng nhập để sử dụng</string>
    
    <!-- For customers -->
    <string name="customer_list_label">Khách hàng</string>
    <string name="customer_title">Danh sách khách hàng của bạn</string>
    <string name="search_hint">Tìm kiếm</string>
    <string name="search_button_title">Tìm kiếm</string>
    <string name="add_button">Thêm</string>
    
    <!-- Label for main menu -->
    <string name="customer_list">Danh sách khách hàng</string>
    
    <!-- For customer detail -->
    <string name="play_services_not_installed">Dịch vụ Google Play không được cài đặt trên thiết bị</string>
    <string name="legal_info">Thông tin</string>
    <string name="location_source_demo_label">Location Source Demo</string>
    <string name="location_source_demo_description">Demonstrates how to use a custom location source.</string>
    
    <string name="clear_map">Chỉ khách hàng này</string>
    <string name="reset_map">Tất cả</string>
    <string name="send_demo">Gửi vị trí</string>
    <string name="marker_label">Thông tin chi tiết</string>
    <string name="marker_description">Demonstrates how to add Markers to a map.</string>
    <string name="map_not_ready">Bản đồ không sẵn sàng</string>

    <!-- Customer show on the map -->
    <string name="customer_name">Tên khách hàng:</string>
    <string name="customer_id">Mã khách hàng:</string>
    <string name="customer_phone">Điện thoại:</string>
    <string name="customer_address">Địa chỉ:</string>
    
    <string name="planning_label">Kế hoạch</string>
    
    <!-- Take order -->
	<string name="amount">Tổng cộng</string>
	<string name="product">Sản phẩm</string>
	<string name="amount_title">Đơn đặt hàng</string>
	<string name="amount_tv_id">Mã khách hàng:</string>
	<string name="amount_ed">0</string>
	<string name="amount_tv_name">Tên khách hàng:</string>
	<string name="amount_total">Tổng giá trị:</string>
	<string name="amount_documentl">Gồm có:</string>
	<string name="amount_discount">Giảm giá:</string>
	<string name="amount_bt_discount">Set:</string>
	<string name="amount_sume_final">Tổng cuối cùng:</string>
	<string name="amount_note">Ghi chú:</string>
	<string name="amount_save_bt">Lưu lại</string>
	<string name="order_title">Hóa đơn</string>
	
	<!-- Take order manager -->
	<string name="order_manager">Danh sách hóa đơn</string>
	<!-- Sale order -->
	<string name="sale_label">Hóa đơn bán hàng</string>
	<string name="sale_detail_label">Chi tiết hóa đơn bán hàng</string>
	<string name="sale_title">Danh sách hóa đơn bán</string>
	<string name="sale_filter_lable">Lọc</string>
	<string name="sale_filter_lable_from">Từ</string>
	<string name="sale_filter_lable_to">Đến</string>
	<string name="sale_filter_bt">OK</string>
	<string name="sale_search_hint">Mã/Tên khách hàng</string>
	<string name="sale_search_bt">Tìm kiếm</string>
	
	
	<!-- For product -->
	<string name="product_title">Đặt hàng</string>
	<string name="product_group">Nhóm sản phẩm:</string>
	<string name="product_search_bt">Tìm kiếm</string>
	<string name="product_total_line">Tổng số:</string>
	
	
	<string name="product_id">Mã sản phẩm:</string>
	<string name="product_name">Tên sản phẩm:</string>
	<string name="product_barcode">Mã vạch:</string>
	<string name="product_brand">Thương hiệu:</string>
	<string name="product_origin">Xuất sứ:</string>
	<string name="product_packing">Quy cách:</string>
	<string name="product_quantification">Đơn vị:</string>
	<string name="product_tax">Thuế:</string>
	<string name="product_import_price">Giá nhập:</string>
	<string name="product_export_price">Giá bán:</string>
	<string name="product_provider">Nhà cung cấp:</string>
	<string name="product_description">Mô tả:</string>
	<string name="product_image_path">Đường dẫn ảnh:</string>
	
	<string name="schedule">Lịch trình</string>
	
	<string name="orders_manager">Hóa đơn đặt hàng</string>
	<string name="orders_detail_manager">Chi tiết hóa đơn đặt hàng</string>
	
	<string name="take_images">Chụp ảnh</string>
	
	<string name="action_search">Tìm kiếm</string>
	<string name="action_location_found">Vị trí hiện tại</string>
	<string name="action_refresh">Làm mới</string>
	<string name="action_help">Giúp đỡ</string>
	<string name="action_check_updates">Kiểm tra cập nhật</string>
	
	<!-- stock_manager -->
	<string name="stock_manager">Quản lý tồn kho</string>
	
	<!-- Product dialog -->
	<string name="product_name">Tên sản phẩm</string>
	<string name="product_price_title">Giá</string>
	<string name="product_btt_yes">Chấp nhận</string>
	<string name="product_btt_no">Hủy</string>
	<string name="product_btt_delete">Xóa</string>
	<string name="product_discount_title">Sản phẩm khuyến mãi</string>
	<string name="product_count_hint">số lượng</string>
	<string name="product_discount_hint">giảm giá (%)</string>
	
	<!-- insert customers -->
	<string name="insert_title">Thêm mới</string>
	<string name="cus_name">Tên khách hàng</string>
	<string name="cus_id">Mã khách hàng</string>
	<string name="cus_state">Tỉnh thành</string>
	<string name="cus_line">Tuyến bán hàng</string>
	<string name="cus_area">Khu vực</string>
	<string name="cus_address">Địa chỉ</string>
	<string name="cus_phone">Điện thoại</string>
	<string name="cus_fax">Fax</string>
	<string name="cus_note">Ghi chú</string>
	
	<!-- Calendar -->
	<string name="calendar_manager">Lịch công tác</string>
	<string name="calendar_manager_detail">Chi tiết lịch công tác</string>
	
	<string name="calendar_addition">Thêm mới lịch công tác</string>
	<string name="hint_content">Nội dung công việc</string>
	
	<string name="date_picker">Chọn ngày:</string>
	<string name="time_picker">Chọn thời gian</string>
	
	<string-array name="cities_array">
        <item>Hà Nội</item>
        <item>Hà Nam</item>
        <item>Hải Phòng</item>
        <item>Nam Định</item>
        <item>Quảng Ninh</item>
        <item>Thái Bình</item>
        <item>Bắc Ninh</item>
        <item>Ninh Bình</item>
    </string-array>
    
	<!-- TimeKeeper -->
	<string name="time_picker">Máy chấm công</string>
	<string name="timekeeping_time">Ngày</string>
	<string name="timekeeping_check">Chấm công ngay</string>
	
</resources>