<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FFFFCC"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/FFFFCC"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/amount_title"/>
        
        <LinearLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
		    <TextView 
	            android:id="@+id/customer_id_label"
	            android:gravity="right"
	            android:layout_weight="0.3"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/amount_tv_id"
	            
	            />
		    <EditText 
	            android:id="@+id/customer_id"
	            android:gravity="right"
	            android:layout_weight="0.7"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:enabled="false"
	            android:text="@string/amount_ed"/>
	    </LinearLayout>
	    
        <LinearLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
		    <TextView 
	            android:id="@+id/customer_name_label"
	            android:gravity="right"
	            android:layout_weight="0.3"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/amount_tv_name"
	            
	            />
		    <EditText 
	            android:id="@+id/customer_name"
	            android:gravity="right"
	            android:layout_weight="0.7"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:enabled="false"
	            android:text="@string/amount_ed"/>
	    </LinearLayout>
        <LinearLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
		    <TextView 
	            android:id="@+id/total"
	            android:gravity="right"
	            android:layout_weight="0.3"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/amount_total"
	            
	            />
		    <EditText 
	            android:id="@+id/total_value"
	            android:gravity="right"
	            android:layout_weight="0.7"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:enabled="false"
	            android:text="@string/amount_ed"/>
	    </LinearLayout>
	    
	    <LinearLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
	    <TextView 
            android:id="@+id/document"
            android:gravity="right"
            android:layout_weight="0.3"
	        android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/amount_documentl"/>
	    <EditText 
            android:id="@+id/document_value"
            android:gravity="right"
            android:layout_weight="0.7"
	        android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/amount_ed"/>
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/linearlayout_discount"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
		    <TextView 
	            android:id="@+id/discount"
	            android:gravity="right"
	            android:layout_weight="0.3"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/amount_discount"/>
		    <EditText 
	            android:id="@+id/discount_percent"
	            android:gravity="right"
	            android:layout_weight="0.2"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:enabled="false"
	            android:text="@string/amount_ed"/>
		    <Button
		            android:id="@+id/set"
		            android:layout_weight="0.2"
	        		android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:text="@string/amount_bt_discount"
		            android:onClick="setDiscount"
		            />
		    <EditText 
	            android:id="@+id/discount_value"
	            android:gravity="right"
	            android:layout_weight="0.3"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:enabled="false"
	            android:text="@string/amount_ed"/>
	    </LinearLayout>
	    
	    <EditText 
            android:id="@+id/tax"
	        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            />
	    
	    
	    <LinearLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
		    <TextView 
	            android:id="@+id/sum"
	            android:gravity="right"
	            android:layout_weight="0.3"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/amount_sume_final"/>
		    <EditText 
	            android:id="@+id/sum_value"
	            android:gravity="right"
	            android:layout_weight="0.7"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:enabled="false"
	            android:text="@string/amount_ed"/>
	    </LinearLayout>
	    
	    <LinearLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
		    <TextView 
	            android:id="@+id/note0"
	            android:gravity="right"
	            android:layout_weight="0.3"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/amount_note"/>
		    <EditText 
	            android:id="@+id/note"
	            android:gravity="right"
	            android:layout_weight="0.7"
		        android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            />
	    </LinearLayout>
	    
	    <Button
		            android:id="@+id/save"
	        		android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="30dp"
		            android:text="@string/amount_save_bt"/>
    </LinearLayout>
        
</LinearLayout>
