<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/FFFFCC"
    
    >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    
    android:paddingLeft="5dip"
    android:paddingTop="5dip"
    android:paddingRight="5dip"
    android:paddingBottom="5dip"
    >
	    <RelativeLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" 
			    >
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="25dp"
		        android:text="@string/sale_title"
		        />
		    <ImageButton 
		        android:id="@+id/new_sale_order"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/ic_action_new"
		        android:layout_alignParentRight="true"
		        />
    	</RelativeLayout>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    >
		    <TextView 
	        android:layout_weight="0.2"
	        android:layout_width= "0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/sale_filter_lable"
	        />
		    <EditText 
		        android:id="@+id/start"
		        android:layout_weight="0.3"
		        android:layout_width= "0dip"
		        android:layout_height="wrap_content"
		        android:text="@string/sale_filter_lable_from"
		        android:editable="false"
		        />
		    <Button 
		        android:id="@+id/date1"
		        android:layout_weight="0.05"
		        android:layout_width= "0dip"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:onClick="button_click_1"
		        />
		    <EditText 
		        android:id="@+id/end"
		        android:layout_weight="0.3"
		        android:layout_width= "0dip"
		        android:layout_height="wrap_content"
		        android:text="@string/sale_filter_lable_to"
		        android:editable="false"
		       
		        />
		    <Button
		        android:id="@+id/date2" 
		        android:layout_weight="0.05"
		        android:layout_width= "0dip"
		        android:layout_height="wrap_content"
		        android:text=""
		         android:onClick="button_click_2"
		        />
		    <Button 
		        android:layout_weight="0.2"
		        android:layout_width= "0dip"
		        android:layout_height="wrap_content"
		        android:text="@string/sale_filter_bt"
		        android:onClick="button_filter"
		        />
	    </LinearLayout>
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    >
		    
		    <EditText 
		        android:id="@+id/id_search"
		        android:layout_weight="0.6"
		        android:layout_width= "0dip"
		        android:layout_height="wrap_content"
		        android:hint="@string/sale_search_hint"
		        />
		    
		    
		    <Button 
		        android:layout_weight="0.4"
		        android:layout_width= "0dip"
		        android:layout_height="wrap_content"
		        android:text="@string/sale_search_bt"
		        />
	    </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        
        android:paddingLeft="5dip"
	    android:paddingTop="5dip"
	    android:paddingRight="5dip"
	    android:paddingBottom="5dip"
        >
	    <ListView
	        android:drawSelectorOnTop="false"
		android:listSelector="#00000000"	   
		android:background="@drawable/selector"     
        android:id="@+id/list_view_product"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
        
    </LinearLayout>
</LinearLayout>
