<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/FFFFCC"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:textSize="30dp"
            android:text="@string/product_title"/>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        	<TextView 
            android:id="@+id/class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_group"/>
		    <Spinner 
		        android:id="@+id/class_id"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"/>
	    </LinearLayout>
	    
	    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        	
	        <LinearLayout
		        android:focusable="true" 
		        android:focusableInTouchMode="true"
    			android:layout_width="0px" 
    			android:layout_height="0px"/>
		    <EditText 
		        android:id="@+id/product_id"
	        	android:layout_width= "match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/search_hint"
		        android:gravity="center"
		        />
		    
	    </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
	    <ListView
        android:id="@+id/list_view_product"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
        
    </LinearLayout>

    
    <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="0"
       android:orientation="horizontal"
       android:baselineAligned="false"
       android:weightSum="1.0"
       >
	    <TextView 
	        android:id="@+id/total_name"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_width="0dip"
	        android:background="@color/red"
	        android:text="@string/product_total_line"
	        />
	    
	    <TextView
	        android:id="@+id/total_value"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_width="0dip"
	        android:gravity="center"
	        android:background="@color/orange"
	        android:text="@string/amount_ed"	       	        
	        />
       
   	</LinearLayout>
    	                
</LinearLayout>
